--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,11 @@
   --textSoft: #e5e5e5;
   --btn: #3673fd;
 }
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   background-color: var(--bg);
   color: var(--text);
@@ -14,4 +18,16 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.container {
+  width: 80%;
+  background-color: red;
+  margin: auto;
+  padding-left: 50px;
+  padding-right: 50px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
