--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,8 +21,8 @@ a {
 }
 
 .container {
-  width: 80%;
-  background-color: red;
+  width: 1536px;
+  background-color: var(--bg);
   margin: auto;
   padding-left: 50px;
   padding-right: 50px;
@@ -30,4 +30,42 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+@media (max-width: 1536px) {
+  .container {
+    width: 1366px;
+  }
+}
+
+@media (max-width: 1366) {
+  .container {
+    width: 1280px;
+  }
+}
+
+@media (max-width: 1280px) {
+  .container {
+    width: 1024px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    width: 768px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 640px;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    width: 475px;
+  }
 }
