--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -4,3 +4,45 @@
   justify-content: center;
   gap: 10px;
 }
+
+.logout {
+  padding: 10px;
+  background-color: var(--text);
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.menuButton,
+.mobileLinks {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .links {
+    display: none;
+  }
+  .menuButton {
+    display: block;
+    cursor: pointer;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: var(--text);
+  }
+
+  .mobileLinks {
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 50%;
+    height: calc(100vh - 100px);
+    /* background-color: var(--bg); */
+    background-color: rebeccapurple;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+}
