--- a/src/components/navbar/links/navLink/navLink.module.css
+++ b/src/components/navbar/links/navLink/navLink.module.css
@@ -1,5 +1,11 @@
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  min-width: 100px;
+  padding: 10px;
+  border-radius: 20px;
+  font-weight: 500;
+  text-align: center;
+}
+.active {
+  background-color: var(--text);
+  color: var(--bg);
 }
