--- a/src/app/blog/blog.moudle.css
+++ b/src/app/blog/blog.moudle.css
@@ -1,6 +1,21 @@
-.conatiner {
+.container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 100px;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.post {
+  width: 30%;
+}
+
+@media screen and (max-width: 1280px) {
+  .post {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .post {
+    width: 100%;
+  }
 }
