--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -43,3 +43,15 @@
 .img {
   object-fit: contain;
 }
+
+@media (max-width: 768px) {
+  .conatiner {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .box {
+    flex-direction: column;
+    gap: 50px;
+  }
+}
