--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -47,8 +47,23 @@
   filter: grayscale(1);
 }
 
-.brandImg {
+@media (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .buttons {
+    justify-content: center;
+  }
 }
 
-.heroImg {
+@media (max-width: 768px) {
+  .title {
+    font-size: 64px;
+  }
+
+  .brands {
+    width: 100%;
+  }
 }
